--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,9 +1,27 @@
+# Set terminal colors
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
-# List of plugins
+# Tmux prefix key
+set-option -g prefix C-Space
+unbind C-Space
+bind C-Space send-prefix
+
+# Vim style move keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R 
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# Plugins
 ## TPM
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -16,4 +34,4 @@ set -sg escape-time 50
 bind r source-file ~/.tmux.conf
 
 # Keep at the end
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
