--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,7 +27,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 ## Theme
 set -g @plugin 'wfxr/tmux-power'
-set -g @tmux_power_theme 'moon'
+set -g @tmux_power_theme 'snow'
 
 # Fixes
 set -sg escape-time 50
