Added terraform support, poetry to zsh + others

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,9 @@ set-option -sa terminal-overrides ',xterm-256color:RGB'
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
+# Enable special key interactions (Ctrl + *)
+set-option -gw xterm-keys on
+
 # Tmux prefix key
 set-option -g prefix C-Space
 unbind C-Space
@@ -13,7 +16,7 @@ bind C-Space send-prefix
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
-bind l select-pane -R 
+bind l select-pane -R
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
